# MedWard

./: .env  .env.example  .eslintrc.cjs  .firebaserc  .gitignore  AIAssistant.jsx  AuthContext.jsx  Badge.jsx  Button.jsx  CORE.md  DEPLOYMENT_CHECKLIST.md  DISASTER_RECOVERY_RUNBOOK.md  DifferentialGenerator.jsx  FormInput.jsx  GEMINI.md  Login.jsx  MOBILE_RELEASE_GUIDE.md  MedicationList.jsx  OnCallAssistant.jsx  PRODUCTION_DEPLOYMENT.md  PatientCard.jsx  PatientForm.jsx  PatientList.jsx  Patients.jsx  QUICKSTART.md  README.md  Settings.jsx  Spinner.jsx  USER_TRAINING_GUIDE.md  antibioticGuide.js  askClinical.js  capacitor.config.ts  codemagic.yaml  config.js  eslint.config.js  firebase.config.js  firebase.json  firestore.indexes.json  firestore.rules  gemini.ts  (+15 more)
labx/: .env.example  .gitignore  README.md  cloudbuild.yaml  pyproject.toml
labx/.github/workflows/: ci.yml
labx/docker/: Dockerfile  docker-compose.yml
labx/labx/: __init__.py  main.py
labx/labx/api/: middleware.py  schemas.py  security.py  server.py
labx/labx/cli/: cli.py  formatters.py
labx/labx/config/: constants.py  settings.py
labx/labx/domain/: flags.py  models.py  reference.py  severity.py  trends.py  units.py
labx/labx/observability/: logging.py  metrics.py  tracing.py
labx/labx/pipeline/: concurrency.py  image_io.py  merge.py  orchestrator.py  postprocess.py
labx/labx/prompts/: summary.md  (+1 more)
labx/scripts/: benchmark.py  deploy_cloud_run.sh  dev_server.sh
labx/tests/: test_flag_recompute.py  test_merge.py  test_pipeline_smoke.py  test_reference_ranges.py  test_trends.py  test_units.py
(+529 files in other folders)
